<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>csv_to_rosbag</name>
  <version>0.0.0</version>
  <description>Converts Imu data from csv to rosbag</description>
  <maintainer email="majorg.96@gmail.com">gabor</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>csv_to_rosbag_node</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
